--- a/InspiringQuotes/Base.lproj/Main.storyboard
+++ b/InspiringQuotes/Base.lproj/Main.storyboard
@@ -73,32 +73,23 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="favQuotes" id="bNA-Hn-psI" customClass="QuotesTableViewCell" customModule="InspiringQuotes" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="41"/>
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="41.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bNA-Hn-psI" id="r2v-lZ-HTF">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="41"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="41.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VvG-b8-6eb">
-                                            <rect key="frame" x="363" y="-0.5" width="35" height="41"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="35" id="awS-E4-mir"/>
-                                            </constraints>
-                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hj4-jU-U5m">
-                                            <rect key="frame" x="20" y="10" width="323" height="21"/>
+                                            <rect key="frame" x="20" y="10" width="384" height="21.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="VvG-b8-6eb" firstAttribute="top" secondItem="r2v-lZ-HTF" secondAttribute="top" id="2bD-LE-HPL"/>
                                         <constraint firstItem="hj4-jU-U5m" firstAttribute="leading" secondItem="r2v-lZ-HTF" secondAttribute="leading" constant="20" id="711-fp-Olz"/>
+                                        <constraint firstAttribute="trailing" secondItem="hj4-jU-U5m" secondAttribute="trailing" constant="10" id="AIC-1I-Rhm"/>
                                         <constraint firstItem="hj4-jU-U5m" firstAttribute="top" secondItem="r2v-lZ-HTF" secondAttribute="top" constant="10" id="P37-e9-uL2"/>
-                                        <constraint firstAttribute="bottom" secondItem="VvG-b8-6eb" secondAttribute="bottom" id="gN9-ca-iQv"/>
-                                        <constraint firstItem="VvG-b8-6eb" firstAttribute="leading" secondItem="hj4-jU-U5m" secondAttribute="trailing" constant="20" id="hKL-T4-hQR"/>
-                                        <constraint firstAttribute="trailing" secondItem="VvG-b8-6eb" secondAttribute="trailing" constant="16" id="iwp-Pp-pSp"/>
                                         <constraint firstAttribute="bottom" secondItem="hj4-jU-U5m" secondAttribute="bottom" constant="10" id="mtM-ZY-z1N"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -431,6 +422,7 @@
                                                             </constraints>
                                                         </tableViewCellContentView>
                                                         <connections>
+                                                            <outlet property="favImage" destination="mYW-xR-KdH" id="vJZ-jg-ZEX"/>
                                                             <outlet property="quotes" destination="CdG-xi-3GQ" id="Lih-Bh-woM"/>
                                                         </connections>
                                                     </tableViewCell>
