--- a/InspiringQuotes/Base.lproj/Main.storyboard
+++ b/InspiringQuotes/Base.lproj/Main.storyboard
@@ -15,9 +15,8 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FHm-IB-sSI" colorLabel="IBBuiltInLabel-Red">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.48430787930000002" green="0.37255925410000001" blue="1" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="barTintColor" red="0.31460203390000002" green="0.75138825949999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="selectedImageTintColor" red="0.31460203390000002" green="0.75138825949999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.95927123049999996" green="1" blue="0.97061130120000005" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="selectedImageTintColor" systemColor="systemOrangeColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="xmu-8c-vY6" kind="relationship" relationship="viewControllers" id="E5h-93-QaI"/>
@@ -33,7 +32,7 @@
         <scene sceneID="ct4-UH-PnL">
             <objects>
                 <navigationController id="xmu-8c-vY6" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Quotes" id="ykX-bo-W0q"/>
+                    <tabBarItem key="tabBarItem" title="Quotes" image="quote.opening" catalog="system" id="ykX-bo-W0q"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="JS4-V2-6Gj">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -46,11 +45,11 @@
             </objects>
             <point key="canvasLocation" x="-1867" y="-979"/>
         </scene>
-        <!--Favorite-->
+        <!--Favorites-->
         <scene sceneID="qYf-fN-Pcz">
             <objects>
                 <navigationController id="JdR-Za-fIk" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Favorite" id="qHQ-KF-VGD"/>
+                    <tabBarItem key="tabBarItem" title="Favorites" image="heart.fill" catalog="system" id="qHQ-KF-VGD"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1a2-EC-UZk">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -243,7 +242,7 @@
         <scene sceneID="aDv-6D-Ccr">
             <objects>
                 <navigationController id="hrd-75-zE3" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Author" id="wt2-0E-q9f"/>
+                    <tabBarItem key="tabBarItem" title="Author" image="pencil" catalog="system" id="wt2-0E-q9f"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="JgF-fu-I0p">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -476,12 +475,18 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart.fill" catalog="system" width="128" height="109"/>
+        <image name="pencil" catalog="system" width="128" height="113"/>
+        <image name="quote.opening" catalog="system" width="128" height="79"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
